[package]
name = "proc_macro_starter"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
publish = false

[lib]
proc-macro = true

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
quote = "0.5.1"
proc-macro2 = { version = "0.3.3", features = ["nightly"] }
syn = { version = "0.13", features = ["full", "extra-traits"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
smallvec = "0.6.0"
